--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
       </p> 
 
-      <p><img src="img/andreas.jpg" height="300" width="201" alt="Foto" /> 
+      <p><img src="https://images.unsplash.com/photo-1643241044264-0084069c5f00?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1245&q=80" height="300" width="201" alt="Foto" /> 
 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a augue id 
 
@@ -115,6 +115,7 @@
         Sed consectetur ornare libero a sagittis. Pellentesque aliquet ipsum ante. 
 
         Sed eget tellus dui, eget sodales lectus. 
+          <img src="<img src="https://images.unsplash.com/photo-1643241044264-0084069c5f00?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1245&q=80" height="300" width="201" alt="Foto" /> " height="300" width="201" alt="Foto" /> 
 
       </p> 
 
