--- a/optimera/index.html
+++ b/optimera/index.html
@@ -100,7 +100,7 @@
 
       </p> 
 
-      <p><img src="https://images.unsplash.com/photo-1643241044264-0084069c5f00?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1245&q=80" height="300" width="201" alt="Foto" /> 
+      <p><img src="säng.jfif" height="300" width="201" alt="Foto" /> 
       </p>
       <p>
 
@@ -120,7 +120,7 @@
       </p>
 
       <p> 
-        <img src="https://images.unsplash.com/photo-1643310878278-982927b3afca?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" height="300" width="201" alt="Foto" /> 
+        <img src="snubbe.jfif" height="300" width="201" alt="Foto" /> 
 
       </p> 
 
